--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "embla-carousel-react": "^8.6.0",
+    "js-cookie": "^3.0.5",
     "ky": "^1.8.2",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
@@ -41,6 +43,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
