--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-payment-inputs": "^1.2.0",
     "sonner": "^2.0.7",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
+    "use-mask-input": "^3.5.2",
     "zod": "^4.0.5",
     "zustand": "^5.0.8"
   },
@@ -51,6 +53,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-payment-inputs": "^1.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
