--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.13.0",
     "js-cookie": "^3.0.5",
     "ky": "^1.8.2",
     "lucide-react": "^0.525.0",
