--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ky": "^1.8.2",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "19.1.0",
